# MidWare

./: CMakeLists.txt  Makefile  Run  a.out  as.asm  df.cpp  df.h  example.wdr  main.cpp  malloc.asm  nn.asm
Generating/: Semantic_reader.cpp  Semantic_reader.h  Semantic_writer.cpp  Semantic_writer.h  StreamWriter.cpp  StreamWriter.h
IO/: Colored.cpp  Colored.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
Lexical/: Lexem.cpp  Lexem.h  LexicalAnalysis.cpp  LexicalAnalysis.h  escape_chars.cpp  escape_chars.h
Semantic/: Scoped_set.cpp  Scoped_set.h  Semantic.cpp  Semantic.h  expression.cpp  expression.h  utils.h  var_data.cpp  var_data.h
Syntax/: LexicalAnalysisReader.cpp  LexicalAnalysisReader.h  Syntax.cpp  Syntax.h
asm/: exprs.cpp  gen_func.cpp  gen_switch.cpp  start.cpp  vars.c
asm/_memory/: _malloc.cpp
